# ExchangeCore

./: -remote --tags origin  .gitignore  CMakeLists.txt  QUANTARENA.md  README.md
.github/workflows/: release.yml
app/: main.cpp
benchmarks/: main.cpp
include/API/: Events.hpp
include/Benchmarks/: BenchmarkRunner.hpp
include/Core/: ExchangeEngine.hpp  MarketSimulator.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  Portfolio.hpp  QuantArenaExporter.hpp  SHA256.hpp  SessionConfig.hpp  SessionManager.hpp  Statistics.hpp  ThreadSafeQueue.hpp  Trade.hpp
include/TUI/: TerminalApp.hpp  Theme.hpp
quantarena_exports/UI-MATCH-17842953786863528/: manifest.json
quantarena_exports/UI-MATCH-17842953815933925/: manifest.json
quantarena_exports/UI-MATCH-17842953903846407/: manifest.json
quantarena_exports/UI-MATCH-17842955373214919/: manifest.json
quantarena_exports/UI-MATCH-17842963430437505/: manifest.json  trades.jsonl  trades.jsonl.sha256
quantarena_exports/UI-MATCH-17842969432262688/: manifest.json  trades.jsonl  trades.jsonl.sha256
quantarena_exports/mytest/: manifest.json
src/Benchmarks/: BenchmarkRunner.cpp
src/Core/: ExchangeEngine.cpp  MarketSimulator.cpp  MatchingEngine.cpp  OrderBook.cpp  Portfolio.cpp  QuantArenaExporter.cpp  SHA256.cpp  SessionConfig.cpp  SessionManager.cpp  Statistics.cpp
src/TUI/: TerminalApp.cpp
tests/: CoreTests.cpp  QuantArenaTests.cpp
